force-app/main/default/objects/Partner_Tier_Config__mdt/Partner_Tier_Config__mdt.object-meta.xml
<CustomObject>
    <label>Partner Tier Config</label>
    <pluralLabel>Partner Tier Configs</pluralLabel>
</CustomObject>