force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Analytics_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Access_Level__c</fullName>
    <label>Analytics Access Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>