force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Badge_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Badge_Eligibility__c</fullName>
    <description
  >Badge eligibility rule or label for partners in this tier.</description>
    <label>Badge Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>