force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Can_Access_Premium_Content__c.field-meta.xml
<CustomField>
    <fullName>Can_Access_Premium_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Access Premium Content</label>
    <type>Checkbox</type>
</CustomField>