force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Certification_Required__c.field-meta.xml
<CustomField>
    <fullName>Certification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification Required</label>
    <type>Checkbox</type>
</CustomField>