force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Deal_Protection_Days__c.field-meta.xml
<CustomField>
    <fullName>Deal_Protection_Days__c</fullName>
    <label>Deal Protection Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>