force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Enable_CoSell__c.field-meta.xml
<CustomField>
    <fullName>Enable_CoSell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Co-Sell</label>
    <type>Checkbox</type>
</CustomField>