force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <description
  >Lead distribution priority for this tier (lower is higher priority).</description>
    <label>Lead Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>