force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Max_MDF_Budget__c.field-meta.xml
<CustomField>
    <fullName>Max_MDF_Budget__c</fullName>
    <label>Max MDF Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>