force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Max_Open_MDF__c.field-meta.xml
<CustomField>
    <fullName>Max_Open_MDF__c</fullName>
    <description
  >Maximum concurrently open MDF requests allowed for this tier.</description>
    <label>Max Open MDF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>