force-app/main/default/objects/Partner_Tier_Config__mdt/fields/MDF_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>MDF_Multiplier__c</fullName>
    <description
  >Multiplier applied to MDF budget calculations for this tier.</description>
    <label>MDF Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>