force-app/main/default/objects/Partner_Tier_Config__mdt/fields/Portal_Branding_Level__c.field-meta.xml
<CustomField>
    <fullName>Portal_Branding_Level__c</fullName>
    <label>Portal Branding Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>